--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,9 @@
   <button (click)="downvote()">Downvote</button>
   <button (click)="resetPost()">Reset</button>
 
-  <input [(ngModel)]="text">
-  <button (click)="editText()" >Change Title</button>
+  <div>
+    <input [(ngModel)]="text">
+    <button (click)="editText()" >Change Title</button>
+  </div>
 
 </div>
